<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/espacio_lg"
        android:textColor="@android:color/white"
        android:text="@string/vista_previa_titulo" />

    <ImageView
        android:id="@+id/imagenVistaPrevia"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/vista_previa_titulo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/espacio_lg">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonDescartarVistaPrevia"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/espacio_sm"
            android:text="@string/vista_previa_descartar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonUsarVistaPrevia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vista_previa_usar" />
    </LinearLayout>
</LinearLayout>
