<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/barraPlanilla"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/titulo_planilla" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/espacio_md">

            <LinearLayout
                android:id="@+id/contenedorDias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <View style="@style/Divisor.GestorPasantes" android:layout_marginVertical="@dimen/espacio_sm" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/campoSupervisor"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_supervisor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSupervisor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/campoConocimientos"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espacio_sm"
                android:hint="@string/hint_conocimientos">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputConocimientos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="265"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/campoExperiencia"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espacio_sm"
                android:hint="@string/hint_experiencia">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputExperiencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="200"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/campoAprendizaje"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espacio_sm"
                android:hint="@string/hint_aprendizaje">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputAprendizaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="200"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textoErrorPlanilla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espacio_sm"
                android:textColor="@color/error"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/botonGuardarPlanilla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espacio_md"
                android:text="@string/boton_guardar_planilla" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progresoPlanilla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/espacio_md"
                android:indeterminate="true"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
